<resources>
    <string name="app_name">Tutorials</string>
    <string name="title_activity_basic_intent">BasicIntentActivity</string>
    <string name="title_activity_intent_with_data">IntentWithData</string>
    <string name="title_activity_sample">SampleActivity</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_simple_threading_example">SimpleThreadingExampleActivity</string>

    <string name="title_shared_pref_activity">DataManagementSharedPreference</string>
    <string name="play_string">Play</string>
    <string name="highscore_string">&quot;HighScore: &quot;</string>
    <string name="reset_string">Reset</string>
    <string name="title_activity_list_view_demo">ListViewDemoActivity</string>
    <string name="title_image_load_gallery">Load Image From Gallery</string>
    <string name="title_image_zoom_load_gallery">Load Zoom Image From Gallery</string>
    <string name="title_activity_image_from_gallery2">ImageFromGalleryActivity2</string>
    <string name="type_text_to_search">Type Text To Search</string>

    <string name="title_list_view_example">List View Example</string>
    <string name="fix_string">Fix Options</string>

    <string-array name="Titles">
        <item>The Tragedy of Hamlet, Prince of Denmark</item>
        <item>King Lear</item>
        <item>Julius Caesar</item>
    </string-array>
    <string-array name="Quotes">
        <item>Now cracks a noble heart. Good-night, sweet prince; And flights of angels sing thee to thy rest.</item>
        <item>As flies to wanton boys, are we to the gods; they kill us for their sport.</item>
        <item>There is a tide in the affairs of men, which taken at the flood, leads on to fortune. Omitted, all the voyage of their life is bound in shallows and in miseries.</item>
    </string-array>

    <string-array name="menu">
        <item>Delete</item>
        <item>Exclude</item>
        <item>Mark Favorite</item>
    </string-array>

    <string name="title_activity_date_time_display">DateTimeDisplayActivity</string>
    <string name="btn_show_datepicker">Change Time</string>
    <string name="btn_show_timepicker">Change Date</string>
    <string name="title_activity_main_add_filter">MainActivityAddFilter</string>

    <string name="enter_filter_name">Enter a filter name</string>
    <string name="enter_name">Enter a name</string>
    <string name="enter_summary">Enter a summary</string>
    <string name="enter_url">Enter a url</string>
    <string name="dialog_feed_summary">Summary</string>
    <string name="dialog_feed_url">URL</string>
    <string name="dialog_feed_name">Name</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="dialog_feed_title">New Feed</string>
    <string name="dialog_filter_title">New Filter</string>
    <string name="dialog_filter_name">Filter Name</string>
    <string name="dialog_filter_value">Filter Text</string>
    <string name="dialog_filter_value_tip">Text to be filtered</string>
    <string name="subtitle">Subtitle</string>
    <string name="isInclude">Include Filter</string>
    <string name="isGlobal">Global Filter</string>
    <string name="title_activity_menu_example">MenuExampleActivity</string>
    <string name="help">Help</string>
    <string name="title_app_demo_menu">Demoing Menu Option and On click List</string>
    <string name="generate_log_message_string">Generate Log Message</string>
    <string name="stop_service_string">Stop Music Service</string>
    <string name="start_service_string">Start Music Service</string>
    <string name="title_send_broadcast">Send Broadcast</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="error_location_provider">Error in Getting location Provider</string>
    <string name="title_activity_payment_pay_u">PaymentPayUActivity</string>

    <!-- firebase starts -->
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="heading_recent">Recent</string>
    <string name="heading_my_posts">My Posts</string>
    <string name="heading_my_top_posts">My Top Posts</string>
    <string name="hint_email">email</string>
    <string name="hint_password">password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="skip_sign">Skip Sign</string>
    <string name="title_firebase_auth">Firebase Authentication</string>

    <!-- firebase ends -->
</resources>
