<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="@dimen/padding_15_15_20_25" android:layout_width="fill_parent" android:layout_height="wrap_content">

        <TextView android:textSize="@dimen/window" android:textStyle="bold" android:textColor="@color/title"
            android:id="@id/title" android:background="@drawable/dialog_title_background_rounded"
            android:paddingLeft="@dimen/padding_15_15_20_25" android:paddingTop="@dimen/padding_10_10_15_20" android:paddingRight="@dimen/padding_15_15_20_25" android:paddingBottom="@dimen/padding_10_10_15_20"
            android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dialog_filter_title" />

        <RelativeLayout android:background="@drawable/dialog_background_rounded" android:padding="@dimen/padding_15_15_20_25" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@+id/text1" android:textSize="@dimen/text" android:textStyle="normal" android:textColor="@color/text"
                android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dialog_filter_name" />

            <Space android:id="@+id/space1" android:layout_width="fill_parent"
                android:layout_height="@dimen/space_5_5_5_10" android:layout_below="@id/text1" />

            <EditText android:id="@+id/name" android:textStyle="normal" android:textColor="@color/edittext_text"
                android:hint="@string/enter_filter_name" android:background="@drawable/edit_text"
                android:paddingLeft="@dimen/editTextPaddingLeft" android:paddingTop="@dimen/editTextPaddingTop" android:paddingRight="@dimen/editTextPaddingRight" android:paddingBottom="@dimen/editTextPaddingBottom"
                android:layout_width="fill_parent" android:layout_height="wrap_content" android:textSize="@dimen/text"
                android:minHeight="@dimen/editTextMinHeight" android:singleLine="true" android:layout_below="@id/space1" android:inputType="text" />

            <Space android:id="@+id/space2" android:layout_width="fill_parent"
                android:layout_height="@dimen/space_10_10_10_15" android:layout_below="@id/name" />


            <TextView android:textSize="@dimen/text" android:textStyle="normal" android:textColor="@color/text"
                android:id="@+id/text2" android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:text="@string/dialog_filter_value" android:layout_below="@id/space2" />

            <Space android:id="@+id/space3" android:layout_width="fill_parent" android:layout_height="@dimen/space_5_5_5_10" android:layout_below="@id/text2" />
            <EditText android:textSize="@dimen/text" android:textStyle="normal" android:textColor="@color/edittext_text"
                android:id="@+id/filterText" android:background="@drawable/edit_text"
                android:paddingLeft="@dimen/editTextPaddingLeft" android:paddingTop="@dimen/editTextPaddingTop"
                android:paddingRight="@dimen/editTextPaddingRight" android:paddingBottom="@dimen/editTextPaddingBottom" android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:minHeight="@dimen/editTextMinHeight"
                android:hint="@string/dialog_filter_value_tip" android:singleLine="true" android:layout_below="@id/space3" android:inputType="text" />

            <Space android:id="@+id/space4" android:layout_width="fill_parent" android:layout_height="@dimen/space_10_10_10_15" android:layout_below="@id/filterText" />

            <CheckBox
                android:id="@+id/includeFilterCheckBox"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_below="@id/space4"
                android:checked="true"
                android:paddingBottom="@dimen/editTextPaddingBottom" android:paddingLeft="@dimen/editTextPaddingLeft" android:paddingRight="@dimen/editTextPaddingRight" android:paddingTop="@dimen/editTextPaddingTop"
                android:text="@string/isInclude"
                android:textColor="@color/edittext_text" />


            <Space android:id="@+id/space5" android:layout_width="fill_parent"
                android:layout_height="@dimen/space_10_10_10_15" android:layout_below="@id/includeFilterCheckBox" />

            <CheckBox
                android:id="@+id/globalFilterCheckBox"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_below="@id/space5"
                android:checked="false"
                android:paddingBottom="@dimen/editTextPaddingBottom" android:paddingLeft="@dimen/editTextPaddingLeft" android:paddingRight="@dimen/editTextPaddingRight" android:paddingTop="@dimen/editTextPaddingTop"
                android:text="@string/isGlobal"
                android:textColor="@color/edittext_text" />

            <!--<TextView android:textSize="@dimen/text" android:textStyle="normal" android:textColor="@color/text" android:id="@+id/text3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dialog_feed_url" android:layout_below="@id/space4" />
            <Space android:id="@+id/space5" android:layout_width="fill_parent" android:layout_height="@dimen/space_5_5_5_10" android:layout_below="@id/text3" />
            <EditText android:textSize="@dimen/text" android:textStyle="normal" android:textColor="@color/edittext_text" android:id="@+id/url" android:background="@drawable/edit_text" android:paddingLeft="@dimen/editTextPaddingLeft" android:paddingTop="@dimen/editTextPaddingTop" android:paddingRight="@dimen/editTextPaddingRight" android:paddingBottom="@dimen/editTextPaddingBottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/editTextMinHeight" android:hint="@string/enter_url" android:singleLine="true" android:layout_below="@id/space5" android:inputType="textUri" />
            <Space android:id="@+id/space6" android:layout_width="fill_parent" android:layout_height="@dimen/space_15_15_20_25" android:layout_below="@id/url" />
            -->
            <!--<LinearLayout android:orientation="vertical" android:id="@+id/buttonsContainer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/space6">
                <include layout="@layout/section_buttons_ok_cancel" />
            </LinearLayout>
            <Space android:layout_width="fill_parent" android:layout_height="@dimen/space_10_10_10_15" android:layout_below="@id/buttonsContainer" />-->
        </RelativeLayout>
    </LinearLayout>
</ScrollView>